Fix sticker flex issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -473,6 +473,11 @@ nav img {
 	}
 
 	/* CONTACT SECTION */
+	#contact {
+		flex-direction: column;
+		align-items: center;
+	}
+	
 	#contact p:first-of-type {
 		width: 90%;
 		padding: 2rem;
